Fix overflow of image carousel on mobile view. Changed position value to 38px.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -286,7 +286,7 @@ img.card-img-top {
 
 .detail-caption {
     position: relative;
-    right: 50px;
+    right: 38px;
     z-index: 5;
     margin: auto;
     font-size: 1rem;
